# fmn

./: .env  .env.example  .gitignore  deploy  dev  devshell.sh  docker-compose-dev.yaml  docker-compose.yaml  nginx.conf  package.json  pnpm-lock.yaml  svelte.config.js
backend/: Cargo.toml  Dockerfile  rustfmt.toml  start.sh  test.sh
backend/migrations/: 20260321085514_create_item_table.sql  20260321085826_create_recipe_table.sql  20260321090104_create_cart_table.sql
backend/queries/cart/: delete_future_event.sql  delete_many_event.sql  delete_many_item.sql  insert_many_item.sql  insert_one_event.sql  select_many_event.sql  select_many_item.sql  update_one_event.sql
backend/queries/items/: delete_one.sql  insert_one.sql  select_many.sql  select_one.sql  select_one_by_name.sql  update_one.sql
backend/queries/recipes/: delete_many_item.sql  delete_one.sql  insert_many_item.sql  insert_one.sql  select_many.sql  select_one.sql  select_one_by_name.sql  update_one.sql
backend/src/: lib.rs  main.rs  state.rs
backend/src/endpoints/: cart.rs  echo.rs  items.rs  mod.rs  recipes.rs
backend/src/methods/: cart.rs  echo.rs  items.rs  memory_queries.rs  mod.rs  queries.rs  recipes.rs
backend/src/methods/cart/: add_item.rs  mod.rs  read.rs  redo.rs  remove_item.rs  undo.rs
backend/src/methods/items/: create.rs  delete.rs  read.rs  (+2 more)
backend/src/models/: errors.rs  mod.rs  requests.rs  responses.rs  schema.rs
backend/src/queries/: cart.rs  errors.rs  items.rs  mod.rs  recipes.rs
backend/tests/: test.rs
backend/tests/common/: mod.rs
backend/tests/general/: echo.rs
(+197 files in other folders)
